SPACING separated in X and Y for displaying operatorgraphs, JTextFieldResizing now has maximum text field size